grpc-hello/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: grpc-hello
  labels:
    app: grpc-hello
spec:
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  selector:
    app: grpc-hello
  type: ClusterIP
